# taskflowd

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
examples/: invalid_cycle.workflow  simple.workflow
include/taskflowd/: job.h  parser.h  scheduler.h  validation.h  workflow.h
scripts/: test.sh
src/: main.cpp  parser.cpp  scheduler.cpp  validation.cpp  workflow.cpp
tests/: test_parser.cpp  test_scheduler.cpp  test_validation.cpp  test_workflow.cpp
